# image_client

./: .gitignore  README.md  dev_requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
image_client/: __init__.py  client.py
tests/: test_image_transformations.py
