[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
test_paths = tests
log_level = ERROR
log_cli_level = ERROR
filterwarnings =
    ignore::UserWarning

[flake8]
ignore = C901
max-complexity = 10
max-line-length = 120
exclude =
    .git,
    .venv
    .tox
statistics = 1
count = 1
